Fix custom group creation migration Default permissions were created after all migrations. But custom migration required them...

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,5 @@
 [pytest]
 addopts = --ds=config.settings.test --reuse-db -x --failed-first --quiet --tb=short
+# --create-db or ./manage.py drop_test_database
+# --migrations (run automatically)
 python_files = tests.py test_*.py
